--- a/public/css/style.css
+++ b/public/css/style.css
@@ -635,6 +635,107 @@ textarea {
     transform: scale(1.05);
 }
 
+/* ===== OVERLAY MODAL ===== */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.45);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9000;
+    padding: 20px;
+}
+
+/* ===== CARD MODAL ===== */
+.modal-content {
+    background: #ffffff;
+    width: 450px;
+    max-height: 85vh;
+    padding: 25px;
+    border-radius: 20px;
+    overflow-y: auto;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.1);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.nodal-content::-webkit-scrollbar {
+    width: 8px;
+}
+
+.modal-content::-webkit-crollbar-thumb {
+    background: #c7c7c7;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+
+/* ===== DAFTAR NOTE ===== */
+.pin-item {
+    background: #f8f8f8;
+    padding: 12px 15px;
+    margin-bottom: 12px;
+    border-radius: 12px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    -webkit-border-radius: 12px;
+    -moz-border-radius: 12px;
+    -ms-border-radius: 12px;
+    -o-border-radius: 12px;
+
+}
+
+/* ===== TOMBOL PIN/UNPIN ===== */
+.btn-pin-action {
+    background: #6c5ce7;
+    color: white;
+    border: none;
+    padding: 8px 14px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.2s ease;
+}
+
+.btn-close {
+    width: 100%;
+    background: #d63031;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 12px;
+    margin-top: 15px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.modal.hidden {
+    display: none !important;
+}
+
+
+
+/* ===== ANIMATION ===== */
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+@keyframes scaleUp {
+    from { transform: scale(0.85); opacity: 0; }
+    to { transform: scale(1); opacity: 1; }
+}
+
+
 /* Animation */
 @keyframes fadeIn {
     from {
